--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <h2>Download Excursion (Coming soon!)</h2>
+    <video style="display:block; margin: 0 auto;" autoplay="" muted="" loop="">
+      <source src="resources/videos/excursion.mp4" type="video/mp4"/>
+    </video>
+    <h3>Your personal travel guide</h3>
+    <h4>Excursion remembers places you like, and recommends new points of interest around you</h4>
+    <h3>Coming soon for iPhone and Android</h3>
+    <h2>Download Excursion (Coming soon!)</h2>
+    <h5>&copy; Excursion</h5>
   </body>
 </html>
